--- a/vue-springboot/vue-springboot-board/frontend/package.json
+++ b/vue-springboot/vue-springboot-board/frontend/package.json
@@ -9,16 +9,24 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuetify": "^2.5.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "babel-eslint": "^10.0.1",
+    "deepmerge": "^1.5.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "fibers": "^5.0.0",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.2.0",
+    "vue-cli-plugin-vuetify": "^2.4.1",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
