--- a/vue-springboot/vue-springboot-board/src/main/resources/application.properties
+++ b/vue-springboot/vue-springboot-board/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/board?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC 
-spring.datasource.username=root 
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
-
-#mysql 사용 
-spring.jpa.database=mysql 
-# 콘솔에 sql 출력 여부 
-spring.jpa.show-sql=true 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-
+#MySQL 등록
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/board?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=root
+spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
