feat: port번호 변경

--- a/vue-springboot/vue-springboot-board/src/main/resources/application.properties
+++ b/vue-springboot/vue-springboot-board/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#sever port변경
+server.port= 8081
+
 #MySQL 등록
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/board?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
