feat : 회원가입 기능 구현

--- a/vue-springboot/vue-springboot-board/src/main/resources/application.properties
+++ b/vue-springboot/vue-springboot-board/src/main/resources/application.properties
@@ -3,7 +3,16 @@ server.port= 8081
 
 #MySQL 등록
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/board?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.hikari.jdbc-url=jdbc:mysql://127.0.0.1:3306/board?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=root
-spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
+
+#MyBatis
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# xml파일 result type에 패키지명을 생략할 수 있도록 alias 설정
+mybatis.type-aliases-package=com.example.mappertut.model
+
+# Mybatis mapper 위치 설정 
+mybatis.mapper-locations= mappers/*.xml
+
