--- a/vue-springboot/vue-springboot-board/frontend/package.json
+++ b/vue-springboot/vue-springboot-board/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@toast-ui/editor": "^2.5.3",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.0.0",
+    "@toast-ui/vue-editor": "^2.5.3",
     "axios": "^0.21.1",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
