--- a/vue-springboot/vue-springboot-board/pom.xml
+++ b/vue-springboot/vue-springboot-board/pom.xml
@@ -54,6 +54,16 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+		  <groupId>commons-fileupload</groupId>
+		  <artifactId>commons-fileupload</artifactId>
+		  <version>1.2</version>
+		</dependency>
+		<dependency>
+		  <groupId>commons-io</groupId>
+		  <artifactId>commons-io</artifactId>
+		  <version>1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
